@@ -1,13 +1,13 @@
 package io.viana.queue_alert_engine.service;
 
-import io.viana.queue_alert_engine.config.KafkaProperties;
+import io.viana.queue_alert_engine.config.AlertsProperties;
 import io.viana.queue_alert_engine.domain.AlertRule;
+import io.viana.queue_alert_engine.domain.QueueStatus;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -15,43 +15,73 @@ import java.util.stream.Collectors;
 public class QueueMonitorService {
 
     private final KafkaMessageProducer kafkaProducer;
-    private final KafkaProperties kafkaProperties;
+    private final AlertsProperties alertsProperties;
 
-    public void checkQueueStatus(QueueOffsetTracker offsetTracker) {
-        List<AlertRule> alertRules = kafkaProperties.getAlertRules();
-        if (alertRules == null || alertRules.isEmpty()) {
-            log.warn("⚠️ Nenhuma regra de alerta configurada!");
-            return;
-        }
+    /**
+     * Agora recebemos o groupId também, porque cada alerta pertence a um consumer group.
+     */
+    public void evaluateLag(String groupId, AlertRule rule, long lag) {
 
-        log.info("⏱️ Verificando filas com regras de alerta...");
+        QueueStatus status = determineStatus(lag, rule.lagWarning(), rule.lagCritical());
 
-        alertRules.forEach(rule -> {
-            long pending = offsetTracker.getTopicPendingMessages()
-                    .getOrDefault(rule.topic(), 0L);
-            processQueueStatus(rule, pending);
-        });
-    }
+        switch (status) {
+            case OK ->
+                log.info("✅ [{}] topic='{}' part={} OK (lag={} < warn={})",
+                        groupId, rule.topic(), rule.partition(), lag, rule.lagWarning());
 
-    private void processQueueStatus(AlertRule rule, long pending) {
-        if (pending >= rule.pendingThreshold()) {
-            log.warn("⚠️ {} mensagens pendentes em {}", pending, rule.topic());
-            String alertMessage = String.format(
-                    "{\"msg\":\"Fila %s possui %d mensagens pendentes (limite %d)\"}",
-                    rule.topic(), pending, rule.pendingThreshold()
-            );
-            kafkaProducer.sendMessage(alertMessage);
-        } else {
-            log.info("✅ Fila {} dentro do limite ({} < {})", rule.topic(), pending, rule.pendingThreshold());
+            case WARNING -> {
+                log.warn("⚠️ WARNING [{}] topic='{}' part={} lag={} (warn={}, critical={})",
+                        groupId, rule.topic(), rule.partition(), lag,
+                        rule.lagWarning(), rule.lagCritical());
+                sendAlert(groupId, rule, lag, "WARNING");
+            }
+
+            case CRITICAL -> {
+                log.error("🚨 CRITICAL [{}] topic='{}' part={} lag={} (critical={})",
+                        groupId, rule.topic(), rule.partition(), lag, rule.lagCritical());
+                sendAlert(groupId, rule, lag, "CRITICAL");
+            }
         }
     }
 
-    public List<String> getQueuesAboveThreshold(QueueOffsetTracker offsetTracker) {
-        List<AlertRule> alertRules = kafkaProperties.getAlertRules();
-        return alertRules.stream()
-                .filter(rule -> offsetTracker.getTopicPendingMessages()
-                        .getOrDefault(rule.topic(), 0L) >= rule.pendingThreshold())
+    /**
+     * Inclui o groupId no alerta enviado
+     */
+    private void sendAlert(String groupId, AlertRule rule, long lag, String level) {
+        String json = String.format("""
+            {
+              "groupId": "%s",
+              "topic": "%s",
+              "partition": %d,
+              "lag": %d,
+              "level": "%s"
+            }
+            """,
+                groupId,
+                rule.topic(),
+                rule.partition(),
+                lag,
+                level
+        );
+
+        kafkaProducer.sendAlert(json);
+    }
+
+    private QueueStatus determineStatus(long lag, long warn, long critical) {
+        if (lag >= critical) return QueueStatus.CRITICAL;
+        if (lag >= warn) return QueueStatus.WARNING;
+        return QueueStatus.OK;
+    }
+
+    /**
+     * Agora lê topics diretamente de alerts.groups
+     */
+    public List<String> getConfiguredQueues() {
+
+        return alertsProperties.getGroups().stream()
+                .flatMap(group -> group.getRules().stream())
                 .map(AlertRule::topic)
-                .collect(Collectors.toList());
+                .distinct()
+                .toList();
     }
 }
